--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: 'Press Start 2P', cursive;
-            background-color: #d3d3d3; /* Light Gray */
+            background-color: #d3d3d3; /* you are gay */
             color: #333;
             margin: 0;
             padding: 0;
@@ -108,13 +108,13 @@
 <body>
     <div class="container">
         <header>
-            <h1>Welcome to the 90s!</h1>
+            <h1>Welcome to System32!</h1>
         </header>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Games</a></li>
+                <li><a href="#">Store</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -122,7 +122,7 @@
             <p>This website is a blast from the past. Enjoy the colorful and funky design that takes you back to the 90s!</p>
         </main>
         <div class="gallery-container">
-            <h2>Picture Gallery</h2>
+            <h2>Moments</h2>
             <div class="gallery">
                 <img src="https://via.placeholder.com/150" alt="Gallery Image 1">
                 <img src="https://via.placeholder.com/150" alt="Gallery Image 2">
@@ -134,7 +134,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 1999 Retro Web</p>
+        <p>&copy; 2024 System32</p>
     </footer>
 </body>
 </html>
