--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>90s Web Page</title>
+    <title>Yhe 90s</title>
     <meta name="theme-color" content="#d3d3d3">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
@@ -119,17 +119,17 @@
             </ul>
         </nav>
         <main>
-            <p>This website is a blast from the past. Enjoy the colorful and funky design that takes you back to the 90s!</p>
+            <p>Welcome to System32's Official webpage. This is a blast from the past, taking you all the way back to the 90,s</p>
         </main>
         <div class="gallery-container">
             <h2>Moments</h2>
             <div class="gallery">
-                <img src="https://via.placeholder.com/150" alt="Gallery Image 1">
-                <img src="https://via.placeholder.com/150" alt="Gallery Image 2">
-                <img src="https://via.placeholder.com/150" alt="Gallery Image 3">
-                <img src="https://via.placeholder.com/150" alt="Gallery Image 4">
-                <img src="https://via.placeholder.com/150" alt="Gallery Image 5">
-                <img src="https://via.placeholder.com/150" alt="Gallery Image 6">
+                <img src="profile.png" alt="1">
+                <img src="https://via.placeholder.com/150" alt="2">
+                <img src="https://via.placeholder.com/150" alt="3">
+                <img src="https://via.placeholder.com/150" alt="4">
+                <img src="https://via.placeholder.com/150" alt="5">
+                <img src="https://via.placeholder.com/150" alt="6">
             </div>
         </div>
     </div>
